--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.3.0",
     "@astrojs/starlight": "^0.34.4",
+    "@clerk/astro": "^2.10.2",
+    "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "firebase": "^11.10.0",
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.11"
   }
 }
