--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.4.1",
     "@astrojs/node": "^9.3.0",
     "@astrojs/starlight": "^0.34.4",
     "@tailwindcss/vite": "^4.1.11",
